name:                rpc
version:             0.2.0.0
synopsis:            A simple remote procedure call implementation.
description:         Please see README.md
homepage:            https://github.com/joom/rpc
license:             MIT
license-file:        LICENSE
author:              Joomy Korkut
maintainer:          joomy@cattheory.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RPC, RPC.Socket
  build-depends:       base >= 4.7 && < 5
                     , cereal >= 0.5 && < 0.6
                     , aeson >= 0.11
                     , bytestring >= 0.10
                     , network >= 2.6 && < 3
                     , chalk >= 0.1.0.2
                     , uuid >= 1.3
                     , random >= 1
  default-language:    Haskell2010

executable rpc-client
  hs-source-dirs:      app
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Client
  build-depends:       base
                     , rpc
                     , network >= 2.6 && < 3
                     , optparse-applicative >= 0.11
                     , bytestring >= 0.10
                     , cereal >= 0.5 && < 0.6
                     , chalk >= 0.1.0.2
                     , aeson >= 0.11
  default-language:    Haskell2010

executable rpc-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Server
  build-depends:       base
                     , rpc
                     , network >= 2.6 && < 3
                     , optparse-applicative >= 0.11
                     , bytestring >= 0.10
                     , cereal >= 0.5 && < 0.6
                     , containers >= 0.5
                     , chalk >= 0.1.0.2
                     , aeson >= 0.11
                     , stm >= 2.4
                     , stm-containers >= 0.2
                     , list-t
  default-language:    Haskell2010

executable rpc-view-leader
  hs-source-dirs:      app
  main-is:             ViewLeader.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is ViewLeader
  build-depends:       base
                     , rpc
                     , network >= 2.6 && < 3
                     , optparse-applicative >= 0.11
                     , bytestring >= 0.10
                     , cereal >= 0.5 && < 0.6
                     , containers >= 0.5
                     , chalk >= 0.1.0.2
                     , aeson >= 0.11
                     , stm >= 2.4
                     , stm-containers >= 0.2
                     , unix-time >= 0.3
  default-language:    Haskell2010

test-suite rpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rpc
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joom/rpc
